--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CatchUp</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
 
-    <script src="enemy.js" defer></script>
-    <script src="maze.js" defer></script>
-    <script src="logic.js" defer></script>
-    <script src="render.js" defer></script>
-    <script src="index.js" defer></script>
+    <script src="js/enemy.js" defer></script>
+    <script src="js/maze.js" defer></script>
+    <script src="js/logic.js" defer></script>
+    <script src="js/render.js" defer></script>
+    <script src="js/index.js" defer></script>
 </head>
 <body>
 <div class="container">
