added a start game button and a joystick to play with touch and mouse, still need to optimise for smartphones

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CatchUp</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/neo-brutalist.css">
 
     <script src="js/enemy.js" defer></script>
     <script src="js/maze.js" defer></script>
     <script src="js/logic.js" defer></script>
     <script src="js/render.js" defer></script>
-    <script src="js/index.js" defer></script>
+    <script src="js/joystick.js" type="module"></script>
+    <script src="js/index.js" type="module"></script>
 </head>
 <body>
 <div class="container">
